--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    
+    "daisyui": "^2.43.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
-    
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
-    
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
